// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smart-webpack-import Adds chunkName to existing magic comment: Adds chunkName to existing magic comment 1`] = `
"
import(/* webpackPrefetch: true */ './HelloView')

      ↓ ↓ ↓ ↓ ↓ ↓

import(
/*webpackPrefetch:true,webpackChunkName:'HelloView-PzV81'*/

/**/
'./HelloView');
"
`;

exports[`smart-webpack-import Adds chunkname when missing: Adds chunkname when missing 1`] = `
"
import('./HelloView')

      ↓ ↓ ↓ ↓ ↓ ↓

import(
/*webpackChunkName:'HelloView-PzV81'*/
'./HelloView');
"
`;

exports[`smart-webpack-import Don't overwrites manual chunkName: Don't overwrites manual chunkName 1`] = `
"
import(/* webpackChunkName: 'CustomHello' */ './HelloView')

      ↓ ↓ ↓ ↓ ↓ ↓

import(
/* webpackChunkName: 'CustomHello' */
'./HelloView');
"
`;

exports[`smart-webpack-import Keeps chunkName simple even for longer paths: Keeps chunkName simple even for longer paths 1`] = `
"
import('./views/admin/SettingsView')

      ↓ ↓ ↓ ↓ ↓ ↓

import(
/*webpackChunkName:'SettingsView-hOkkh'*/
'./views/admin/SettingsView');
"
`;

exports[`smart-webpack-import Keeps existing comments: Keeps existing comments 1`] = `
"
import(/* keep me */ './HelloView')

      ↓ ↓ ↓ ↓ ↓ ↓

import(
/*webpackChunkName:'HelloView-PzV81'*/

/* keep me */
'./HelloView');
"
`;
